--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
@@ -21,6 +22,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "luxon": "^3.7.2",
     "mongoose": "^8.19.1",
     "mongoose-aggregate-paginate-v2": "^1.1.4",
     "multer": "^2.0.2"
